# python-for-data-science

./: README.md
Python-0/ex00/: Hello.py
Python-0/ex01/: format_ft_time.py
Python-0/ex02/: find_ft_type.py
Python-0/ex03/: NULL_not_found.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex09/: LICENSE  README.md  a.sh  pyproject.toml  tmp.py
Python-0/ex09/bash-5.2/: Makefile  bashversion  config.h  config.status  mksignames  mksyntax
Python-0/ex09/bash-5.2/builtins/: Makefile  mkbuiltins  psize.aux
Python-0/ex09/bash-5.2/doc/: Makefile
Python-0/ex09/bash-5.2/examples/loadables/: Makefile  Makefile.inc  accept  basename  csv  cut  dirname  dsv  fdflags  finfo  getconf  head  id  ln  logname  mkdir  mkfifo  mktemp  mypid  pathchk  print  printenv  push  realpath  rm  rmdir  seq  setpgid  sleep  stat  strftime  sync  tee  truefalse  tty  uname  unlink  whoami
Python-0/ex09/bash-5.2/examples/loadables/perl/: Makefile
Python-0/ex09/bash-5.2/lib/glob/: Makefile
Python-0/ex09/bash-5.2/lib/intl/: Makefile
Python-0/ex09/bash-5.2/lib/malloc/: Makefile
Python-0/ex09/bash-5.2/lib/readline/: Makefile
Python-0/ex09/bash-5.2/lib/sh/: Makefile
Python-0/ex09/bash-5.2/lib/termcap/: Makefile
Python-0/ex09/bash-5.2/lib/tilde/: Makefile
Python-0/ex09/bash-5.2/po/: Makefile  Makefile.in
Python-0/ex09/bash-5.2/support/: Makefile  man2html
Python-0/ex09/ft_package/: __init__.py  example.py
ex02/: find_ft_type.py  tester.py
ex03/: NULL_not_found.py
ex04/: whatis.py
(+28 files in other folders)
