[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [{name="haeris"}, {email="haeris@student.42istanbul.com.tr"}]

description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ ]

license = { text = "MIT" }

[project.urls]
Home-page = "https://github.com/hnur-eris/python-for-data-science/tree/main/Python-0/ex09"